--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,9 @@ section#hero img {
     width: 100%;
     position: absolute;
     bottom: 0px;
- }
+}
 
-section#hero div{
+section#hero div {
     margin-left: 10%;
     width: 70%;
     height: 40%;
@@ -31,35 +31,35 @@ section#hero div{
     flex-wrap: wrap;
 }
 
-section#hero h1{
+section#hero h1 {
     font-size: 2.5rem;
     font-weight: 500;
 }
 
-section#hero button{
+section#hero button {
     background: #861211;
     padding: 14px 20px;
     color: white;
     text-decoration: none;
-    border-radius: 6px;
     font-weight: 600;
     border: 0px;
-    width: 250px;
+    transition: all 0.3s ease;
 }
 
-#hero button:hover { 
+#hero button:hover {
     background: #ffffff;
     color: #861211;
+    transform: translateY(-2px);
 }
 
 
-section#club-grid{
+section#club-grid {
     display: grid;
     gap: 0px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-section#club-grid div{
+section#club-grid div {
     height: 150px;
     background-color: #861211;
     border: 3px solid;
@@ -71,7 +71,7 @@ section#club-grid div{
     font-weight: 500;
     font-size: 1.2rem;
     text-transform: uppercase;
-    transition: 4s ease-out;
+    transition: 3s ease-out;
 }
 
 section#club-grid div:hover {
@@ -90,49 +90,50 @@ section#stats {
     gap: 40px;
 }
 
+div.column-template h3 {
+    font-size: 3rem !important;
+}
+
 section#stats div {
     background: #E5E7EB;
     height: 250px;
     border: 5px solid #861211;
-}
-
-section#stats div {
-    font-size: 1.5rem;
-    display: flex;
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 
     h3 {
-        font-size: 4rem;
-    }   
+        font-size: 5rem;
+    }
+
+    p {
+        font-size: 1.5rem;
+    }
+}
+
+
+div.volunteer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .column-template {
-    font-size: 1rem;
     display: flex;
     flex-direction: column;
     flex-wrap: nowraps;
     align-items: center;
     justify-content: center;
 
-    h3 {
-        font-size: 1rem;
-    }
-
     p {
         text-align: center;
     }
 }
 
-
-
-.margin-left-paragraph {
-    margin-left: 40px;  
-
-}
-
-#teamList{
+#teamList {
     height: 30vh;
     display: flex;
     align-items: center;
@@ -143,19 +144,20 @@ section#stats div {
     from {
         transform: translateX(0);
     }
+
     to {
         transform: translateX(-50%);
     }
 }
 
 
-div#teamList img{
+div#teamList img {
     width: 100px;
     margin-inline: 70px;
     filter: saturate(0);
 }
 
-div#teamList img:hover{
+div#teamList img:hover {
     transition-duration: 400ms;
     transition-timing-function: ease-out;
     transform: scale(1.3);
@@ -182,51 +184,177 @@ section#form>div {
 
 #downloadForm input[type="text"],
 #downloadForm input[type="email"] {
-  width: 100%;
-  padding: 14px 16px;
-  margin-bottom: 18px;
-  font-size: 14px;
-  border: 3px solid #861211;
-  outline: none;
-  font-family: inherit;
+    width: 100%;
+    padding: 14px 16px;
+    margin-bottom: 18px;
+    font-size: 14px;
+    border: 3px solid #861211;
+    outline: none;
+    font-family: inherit;
 }
 
-.checkbox-row{
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  margin-bottom: 30px;
-  text-align: left;
+.checkbox-row {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 30px;
+    text-align: left;
 }
- 
+
 .checkbox-row input[type="checkbox"] {
-  width: 18px;
-  height: 18px;
-  accent-color: #8b0000;
-  cursor: pointer;
+    width: 2rem;
+    height: 2rem;
+    accent-color: #8b0000;
+    cursor: pointer;
 }
- 
+
 .checkbox-row label {
-  font-size: 12px;
-  color: #0f2d34;
-  line-height: 1.4;
+    font-size: 12px;
+    color: #0E2931;
+    line-height: 1.4;
 }
 
 #downloadForm button {
-  width: 50%;
-  padding: 16px;
-  font-size: 16px;
-  font-weight: 700;
-  text-transform: uppercase;
-  background: #0f2d34;
-  color: #ffffff;
-  border: 2px solid #8b0000;
-  cursor: pointer;
-  transition: all 0.3s ease;
+    width: 50%;
+    padding: 16px;
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
+    background: #0E2931;
+    color: #ffffff;
+    border: 2px solid #8b0000;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
- 
+
 #downloadForm button:hover {
-  background: #8b0000;
-  color: #ffffff;
-  transform: translateY(-2px);
+    background: #8b0000;
+    color: #ffffff;
+    transform: translateY(-2px);
+}
+
+
+#footer {
+    height: 20vh;
+    background-color: #0E2931;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    a {
+        color: #ffffff;
+    }
+
+    p {
+        margin-top: 2rem;
+        font-size: 0.8rem;
+    }
+
+    div {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+@media screen and (width < 600px) {
+
+
+    html {
+        font-size: 12px;
+    }
+
+    section#hero h1 {
+        font-size: 2rem;
+        font-weight: 500;
+    }
+
+    section#club-grid {
+        display: grid;
+        gap: 0px;
+        grid-template-columns: 1fr 1fr;
+        width: 100%;
+    }
+
+    section#club-grid div {
+        height: 50px;
+        background-color: #861211;
+        border: 2px solid;
+        border-color: #0E2931;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-weight: 500;
+        font-size: 0.8rem;
+        text-transform: uppercase;
+        transition: 3s ease-out;
+    }
+
+    section#stats {
+        padding: 20px 10px;
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+
+    section#stats div {
+        background: #E5E7EB;
+        height: 150px;
+        border: 3px solid #861211;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+
+
+        h3 {
+            font-size: 3rem;
+        }
+
+        p {
+            font-size: 1.2rem;
+            text-align: center;
+        }
+    }
+
+    div#teamList img {
+        width: 70px;
+        margin-inline: 50px;
+        filter: saturate(1);
+    }
+
+    .checkbox-row input[type="checkbox"] {
+        width: 4rem;
+        height: 4rem;
+    }
+
+    section#form>div {
+        width: 80%;
+        margin: 3rem auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #downloadForm button {
+    width: 100%;
+    }
+    
+    #footer {
+        
+        a {
+        font-size: 1.2rem;
+        margin-top: 1rem;
+        }
+
+        p {
+            font-size: 1rem;
+        }
+    }
 }
